5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1594_2043.log
== TEST (2019-04-07 15:53:50) 
-- CODE:
print(round(x, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(x, 2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 15:54:34) 
-- CODE:
print(round(1,2,3 e 4, 2))
-- ERROR:
File "XXXX", line 1
    print(round(1,2,3 e 4, 2))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 16:11:55) 
-- CODE:
print(round(19/4, 7)
-- ERROR:
File "XXXX", line 2
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 16:12:22) 
-- CODE:
print(round(4, 7)
-- ERROR:
File "XXXX", line 2
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 16:13:13) 
-- CODE:
print(round(6.7/4, 7)
-- ERROR:
File "XXXX", line 2
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 15:19:04) 
-- CODE:
a=int(input("Digite a nota a: "))
b=int(input("Digite a nota b: "))
c=int(input("Digite a nota c: "))
d=int(input("Digite a nota d: "))
m=(a+b+c+d)/4
print(round(m, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 15:19:58) 
-- CODE:
a=int(input("Digite a nota a: "))
b=int(input("Digite a nota b: "))
c=int(input("Digite a nota c: "))
d=int(input("Digite a nota d: "))
m=(a+b+c+d)/4
print(round(m, 2))

-- EXECUTION TIME:
0.205428
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2043/main.py", line 2, in <module>
    b=int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 15:20:05) 
-- CODE:
a=int(input("Digite a nota a: "))
b=int(input("Digite a nota b: "))
c=int(input("Digite a nota c: "))
d=int(input("Digite a nota d: "))
m=(a+b+c+d)/4
print(round(m, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 15:20:43) 
-- CODE:
a=int(input("Digite a nota a: "))
b=int(input("Digite a nota b: "))
c=int(input("Digite a nota c: "))
d=int(input("Digite a nota d: "))
m=(a+b+c+d)/4
print(round(m, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 15:21:03) 
-- CODE:
a=int(input("Digite a nota a: "))
b=int(input("Digite a nota b: "))
c=int(input("Digite a nota c: "))
d=int(input("Digite a nota d: "))
m=(a+b+c+d)/4
print(round(m, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 15:22:02) 
-- CODE:
a=int(input("Digite a nota a: "))
b=int(input("Digite a nota b: "))
c=int(input("Digite a nota c: "))
d=int(input("Digite a nota d: "))
m=((a+b+c+d)/4)
print(round(m, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 15:23:32) 
-- CODE:
a=float(input("Digite a nota a: "))
b=float(input("Digite a nota b: "))
c=float(input("Digite a nota c: "))
d=float(input("Digite a nota d: "))
m=((a+b+c+d)/4)
print(round(m, 2))

-- OUTPUT:
8.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 15:26:00) 
-- CODE:
a=float(input("Digite a nota a: "))
b=float(input("Digite a nota b: "))
c=float(input("Digite a nota c: "))
d=float(input("Digite a nota d: "))
m=((a*b*c*d)/4)
print(round(m, 2))

-- OUTPUT:
1071.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 15:27:02) 
-- CODE:
a=float(input("Digite a nota a: "))
b=float(input("Digite a nota b: "))
c=float(input("Digite a nota c: "))
d=float(input("Digite a nota d: "))
m=((a+b+c+d)/2)
print(round(m, 2))

-- OUTPUT:
16.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 15:28:10) 
-- CODE:
a=float(input("Digite a nota a: "))
b=float(input("Digite a nota b: "))
c=float(input("Digite a nota c: "))
d=float(input("Digite a nota d: "))
m=((a+b+c+d)/3)
print(round(m, 2))

-- OUTPUT:
10.83
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 15:30:27) 
-- CODE:
a=float(input("Digite a nota a: "))
b=float(input("Digite a nota b: "))
c=float(input("Digite a nota c: "))
d=float(input("Digite a nota d: "))
m=((a*1+b*2+c*3+d*4)/4)
print(round(m, 2))

-- OUTPUT:
20.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 15:31:17) 
-- CODE:
a=float(input("Digite a nota a: "))
b=float(input("Digite a nota b: "))
c=float(input("Digite a nota c: "))
d=float(input("Digite a nota d: "))
m=((a*1+b*2+c*3+d*4)/10)
print(round(m, 2))

-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 15:31:46) 
-- CODE:
a=float(input("Digite a nota a: "))
b=float(input("Digite a nota b: "))
c=float(input("Digite a nota c: "))
d=float(input("Digite a nota d: "))
m=((a*1+b*2+c*3+d*4)/4)
print(round(m, 2))

-- OUTPUT:
20.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 15:33:08) 
-- CODE:
a=float(input("Digite a nota a: "))
b=float(input("Digite a nota b: "))
c=float(input("Digite a nota c: "))
d=float(input("Digite a nota d: "))
m=((a*1+b*2+c*3+d*4)/(a+b+c+d))
print(round(m, 2))

-- OUTPUT:
2.52
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 15:34:57) 
-- CODE:
a=float(input("Digite a nota a: "))
b=float(input("Digite a nota b: "))
c=float(input("Digite a nota c: "))
d=float(input("Digite a nota d: "))
m=((a*1+b*2+c*3+d*4)/(1+2+3+4))
print(round(m, 2))

-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 15:35:39) 
-- CODE:
a=float(input("Digite a nota a: "))
b=float(input("Digite a nota b: "))
c=float(input("Digite a nota c: "))
d=float(input("Digite a nota d: "))
m=((a*1+b*2+c*3+d*4)/(1+2+3+4))
print(round(m, 2))

-- EXECUTION TIME:
0.179427
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
